turmites.lessons.turmites.langtoncolors.LangtonColors.scala.error
LangtonsAnt:8: error: ')' expected but 'if' found.
			if (rule.(i)==R) droite() else gauche()
                        ^